@@ -1,3 +1,7 @@
+2009-04-13
+	* Delete multiple files at a time now.
+	* "Delete selected file" popup menu of files.of.category Widget.
+
 2009-04-12
 	* improve retrieval2() to place cursor at the beginning of the retrieved coding widget.
 	* Add cliked handler to C2Info widget.
